Mon Mar 29 09:36:00 BST 2010  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Wed Mar 24 11:04:46 GMT 2010  Colin Watson  <cjwatson@debian.org>

	Fix build regression when GNU_NROFF is undefined (Savannah bug
	#29318).

	* src/man.c (add_col): New function, split out from
	  make_display_command.
	  (make_roff_command): Reinstate tbl/col logic here, as by the time
	  we get to make_display_command we've forgotten whether tbl was
	  used.
	  (make_display_command): Remove tbl/col logic, useless here.  Use
	  add_col.

Sun Mar 21 21:59:54 GMT 2010  Tanguy Ortolo  <tanguy+debian@ortolo.eu>

	* src/man.c (main): Try underscore-separated subpages as well as
	  hyphen-separated ones (Debian bug #574641).
	* man/man1/man.man1 (Finding manual pages): Document this.
	* NEWS: Document this.

Wed Mar 17 10:26:44 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* gnulib: Import localcharset module.
	* src/encodings.c (struct charset_entry): Rename locale_charset to
	  charset_from_locale.  Update all users.
	  (struct less_charset_entry): Likewise.
	  (get_locale_charset): Use locale_charset function from Gnulib,
	  rather than dealing with nl_langinfo and the fallback ourselves.
	  (get_default_device): Rename locale_charset parameter to
	  charset_from_locale.
	  (get_less_charset): Likewise.
	  (get_jless_charset): Likewise.
	* src/tests/Makefile.am (TESTS_ENVIRONMENT): Add
	  @LOCALCHARSET_TESTS_ENVIRONMENT@.

Sat Mar 13 22:15:54 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* man/check-man: Ignore "table wider than line width" warnings for
	  Dutch too.

Sat Mar 13 21:33:48 GMT 2010  Colin Watson  <cjwatson@debian.org>

	Upgrade to Gnulib 20100308.

Thu Mar 11 01:26:56 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Add AM_MAINTAINER_MODE.  In the modern world,
	  timestamps are often just too fragile for those make targets to
	  work well; use ./autogen.sh instead.
