@@ -1,3 +1,8 @@
+Fri Apr  2 20:26:41 BST 2010  Ville Skyttä  <ville.skytta@iki.fi>
+
+	* include/comp_src.h.in (comp_list): If compress is not available,
+	  use gzip to handle .Z files.
+
 Mon Mar 29 09:36:00 BST 2010  Clytie Siddall  <clytie@riverland.net.au>
 
 	* po/vi.po: Update from Translation Project.
